@@ -527,7 +527,7 @@ class pts_client
 			if($result_identifier != null && pts_config::read_bool_config('PhoronixTestSuite/Options/Testing/SaveSystemLogs', 'TRUE'))
 			{
 				// Save verbose system information here
-				$system_log_dir = $save_to_dir . '/system-logs/' . $result_identifier . '/';
+				$system_log_dir = $save_to_dir . '/system-logs/' . pts_strings::simplify_string_for_file_handling($result_identifier) . '/';
 				pts_file_io::mkdir($system_log_dir, 0777, true);
 
 				// Backup system files
